# MyWorld

./: .gitignore  CMakeLists.txt  README.md  ToDoList  eventmanager.cpp  github-recovery-codes.txt  logopage.cpp  logopage.h  main.cpp  selfgeneratebranch.cpp  selfgeneratebranch.h  selfgenerateline.cpp  selfgenerateline.h  singlesimplebranch.cpp  singlesimplebranch.h  totemanimatingwidget.cpp  totemanimatingwidget.h  updatemachine.cpp  updatemachine.h  worldblackboard.cpp  worldblackboard.h
BaseComponents/: basegraphiccomp.cpp  basegraphiccomp.h  basemapcomp.cpp  basemapcomp.h  baseobject.cpp  baseobject.h  basepropertycomp.cpp  basepropertycomp.h  graphicssceneobject.cpp  graphicssceneobject.h  graphicsviewobject.cpp  graphicsviewobject.h
CommandPackage/: basecommand.cpp  basecommand.h  commandmanager.cpp  commandmanager.h
EventManager/: eventmanager.h
GUIManager/: worldbgwindow.cpp  worldbgwindow.h
GraphicsObjects/: landqgraphicsitem.cpp  landqgraphicsitem.h  mgraphicsobject.cpp  mgraphicsobject.h
MapComponents/: landcomp.cpp  landcomp.h  landgraphiccomp.cpp  landgraphiccomp.h  landmapcomp.cpp  landmapcomp.h  landobject.cpp  landobject.h  landpropertycomp.cpp  landpropertycomp.h
ObjectsManager/: instancemanager.cpp  instancemanager.h  objectsmanager.cpp  objectsmanager.h
TotemBranches/: selfgeneratebranch.cpp  singlesimplebranch.cpp  singlesimplebranch.h  totemanimatingwidget.cpp  totemanimatingwidget.h
